--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="generateParenthesis.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="test_runner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rangeSumQuery.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
