--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="rangeSumQuery.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="kInversePairs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
