Binary Search: problem - Find Peak Element

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="FirstBadVersion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindPeakElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
