Binary Search: problem Find Minimum in Rotated Sorted Array

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="FindPeakElement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindMinInRotatedSortedArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
