--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="profile.h" />
     <ClInclude Include="rangeSumQuery.h" />
     <ClInclude Include="RotatedSortedArray.h" />
+    <ClInclude Include="SearchForRange.h" />
     <ClInclude Include="test_runner.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
