--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="FindClosestElements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PerfectSquare.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
