Binary Search - Find Smallest Letter Greater Than Target

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="maximumUnits.h" />
     <ClInclude Include="minRefuelStops.h" />
     <ClInclude Include="mySqrt.h" />
+    <ClInclude Include="NextGreatestLetter.h" />
     <ClInclude Include="palindromePairs.h" />
     <ClInclude Include="PerfectSquare.h" />
     <ClInclude Include="profile.h" />
