--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="FindMinInRotatedSortedArray2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IntersectionTwoArrays.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
