--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="BinarySearch.h" />
     <ClInclude Include="FindClosestElements.h" />
+    <ClInclude Include="FindDuplicate.h" />
     <ClInclude Include="FindMinInRotatedSortedArray.h" />
     <ClInclude Include="FindMinInRotatedSortedArray2.h" />
     <ClInclude Include="FindPeakElement.h" />
