Binary Search - Count Negative Numbers in a Sorted Matrix

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="FindDuplicate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CountNegatives.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
