--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinarySearch.h" />
+    <ClInclude Include="CountNegatives.h" />
     <ClInclude Include="FindClosestElements.h" />
     <ClInclude Include="FindDuplicate.h" />
     <ClInclude Include="FindMinInRotatedSortedArray.h" />
