Binary Search - k weakest rows in the matrix ordered from weakest to strongest

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="IntersectionTwoArrays.h" />
     <ClInclude Include="isSumEqual.h" />
     <ClInclude Include="kInversePairs.h" />
+    <ClInclude Include="kWeakestRows.h" />
     <ClInclude Include="maximumUnits.h" />
     <ClInclude Include="minRefuelStops.h" />
     <ClInclude Include="MyPow.h" />
