--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="CountNegatives.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="kWeakestRows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
