Binary Search - Find the Distance Value Between Two Arrays

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="BinarySearch.h" />
     <ClInclude Include="CountNegatives.h" />
+    <ClInclude Include="DistanceBetweenTwoArrays.h" />
     <ClInclude Include="FindClosestElements.h" />
     <ClInclude Include="FindDuplicate.h" />
     <ClInclude Include="FindMinInRotatedSortedArray.h" />
