--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="PeakIndexInMountainArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DistanceBetweenTwoArrays.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
