--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="DistanceBetweenTwoArrays.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpecialArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
