Binary Search - Kth Missing Positive Number

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="IntersectionTwoArrays.h" />
     <ClInclude Include="isSumEqual.h" />
     <ClInclude Include="kInversePairs.h" />
+    <ClInclude Include="KthMissingPositiveNumber.h" />
     <ClInclude Include="kWeakestRows.h" />
     <ClInclude Include="maximumUnits.h" />
     <ClInclude Include="minRefuelStops.h" />
