--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="FairCandySwap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KthMissingPositiveNumber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
