--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="rangeSumQuery.h" />
     <ClInclude Include="RotatedSortedArray.h" />
     <ClInclude Include="SearchForRange.h" />
+    <ClInclude Include="SearchInsert.h" />
     <ClInclude Include="SpecialArray.h" />
     <ClInclude Include="test_runner.h" />
     <ClInclude Include="TwoSum.h" />
