--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="SearchInsert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CheckIfExist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
