--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="ArrangingCoins.h" />
     <ClInclude Include="BinarySearch.h" />
+    <ClInclude Include="BitsOperations.h" />
     <ClInclude Include="CheckIfExist.h" />
     <ClInclude Include="CountNegatives.h" />
     <ClInclude Include="DistanceBetweenTwoArrays.h" />
