--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="TriangularMatrices.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GetDecimalValue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
