--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -137,5 +137,8 @@
     <ClInclude Include="GetDecimalValue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MiddleNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
