--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -140,5 +140,8 @@
     <ClInclude Include="MiddleNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeleteNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
