--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="maximumUnits.h" />
     <ClInclude Include="MiddleNode.h" />
     <ClInclude Include="minRefuelStops.h" />
+    <ClInclude Include="MyHashSet.h" />
     <ClInclude Include="MyPow.h" />
     <ClInclude Include="mySqrt.h" />
     <ClInclude Include="NextGreatestLetter.h" />
