--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -146,5 +146,8 @@
     <ClInclude Include="MyHashSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyHashMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
