--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClInclude Include="MyHashMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeleteDuplicates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
