Array - Final Value of Variable After Performing Operations

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="DistanceBetweenTwoArrays.h" />
     <ClInclude Include="FairCandySwap.h" />
     <ClInclude Include="Fibonacci.h" />
+    <ClInclude Include="finalValue.h" />
     <ClInclude Include="FindClosestElements.h" />
     <ClInclude Include="FindDuplicate.h" />
     <ClInclude Include="FindMinInRotatedSortedArray.h" />
