--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -176,5 +176,8 @@
     <ClInclude Include="BuildArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="finalValue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
