Array - Running Sum of 1d Array

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -179,5 +179,8 @@
     <ClInclude Include="finalValue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RunningSum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
