--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="profile.h" />
     <ClInclude Include="rangeSumQuery.h" />
     <ClInclude Include="RotatedSortedArray.h" />
+    <ClInclude Include="RunningSum.h" />
     <ClInclude Include="SearchForRange.h" />
     <ClInclude Include="SearchInsert.h" />
     <ClInclude Include="SpecialArray.h" />
