--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -182,5 +182,8 @@
     <ClInclude Include="RunningSum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ShuffleArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
