--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="KthMissingPositiveNumber.h" />
     <ClInclude Include="kWeakestRows.h" />
     <ClInclude Include="maximumUnits.h" />
+    <ClInclude Include="MaximumWealth.h" />
     <ClInclude Include="MiddleNode.h" />
     <ClInclude Include="minRefuelStops.h" />
     <ClInclude Include="MyHashMap.h" />
