Array - Kids With the Greatest Number of Candies

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="guessNumber.h" />
     <ClInclude Include="IntersectionTwoArrays.h" />
     <ClInclude Include="isSumEqual.h" />
+    <ClInclude Include="KidsWithCandies.h" />
     <ClInclude Include="kInversePairs.h" />
     <ClInclude Include="KthMissingPositiveNumber.h" />
     <ClInclude Include="kWeakestRows.h" />
