--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -188,5 +188,8 @@
     <ClInclude Include="MaximumWealth.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KidsWithCandies.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
