--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="FirstPalindrome.h" />
     <ClInclude Include="generateParenthesis.h" />
     <ClInclude Include="GetDecimalValue.h" />
+    <ClInclude Include="GoodPairs.h" />
     <ClInclude Include="guessNumber.h" />
     <ClInclude Include="IntersectionTwoArrays.h" />
     <ClInclude Include="isSumEqual.h" />
