Array - 1365. How Many Numbers Are Smaller Than the Current Number

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="SearchForRange.h" />
     <ClInclude Include="SearchInsert.h" />
     <ClInclude Include="ShuffleArray.h" />
+    <ClInclude Include="SmallerNumbers.h" />
     <ClInclude Include="SpecialArray.h" />
     <ClInclude Include="test_runner.h" />
     <ClInclude Include="TriangularMatrices.h" />
