--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -200,5 +200,8 @@
     <ClInclude Include="SmallerNumbers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DecompressRLElist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
