Array - Decode XORed Array

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -206,5 +206,8 @@
     <ClInclude Include="RestoreString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DecodeXORedArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
