--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="CheckIfExist.h" />
     <ClInclude Include="ConcatenationOfArray.h" />
     <ClInclude Include="CountNegatives.h" />
+    <ClInclude Include="CreateTargetArray.h" />
     <ClInclude Include="DecodeXORedArray.h" />
     <ClInclude Include="DecompressRLElist.h" />
     <ClInclude Include="DeleteDuplicates.h" />
