Array - 1773. Count Items Matching a Rule

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -212,5 +212,8 @@
     <ClInclude Include="CreateTargetArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CountMatches.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
