Array - 2006. Count Number of Pairs With Absolute Difference K

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="BuildArray.h" />
     <ClInclude Include="CheckIfExist.h" />
     <ClInclude Include="ConcatenationOfArray.h" />
+    <ClInclude Include="CountKDifference.h" />
     <ClInclude Include="CountMatches.h" />
     <ClInclude Include="CountNegatives.h" />
     <ClInclude Include="CreateTargetArray.h" />
