Array - 1684. Count the Number of Consistent Strings

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="BuildArray.h" />
     <ClInclude Include="CheckIfExist.h" />
     <ClInclude Include="ConcatenationOfArray.h" />
+    <ClInclude Include="CountConsistentStrings.h" />
     <ClInclude Include="CountKDifference.h" />
     <ClInclude Include="CountMatches.h" />
     <ClInclude Include="CountNegatives.h" />
