--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -227,5 +227,8 @@
     <ClInclude Include="ArrayStringsAreEqual.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CountConsistentStrings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
