Array - 1816. Truncate Sentence

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -230,5 +230,8 @@
     <ClInclude Include="CountConsistentStrings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TruncateSentence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
