--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="TargetIndices.h" />
     <ClInclude Include="test_runner.h" />
     <ClInclude Include="TriangularMatrices.h" />
+    <ClInclude Include="TruncateSentence.h" />
     <ClInclude Include="TwoSum.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
